[package]
name = "kube-utils"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
base64 = "0.13.0"
chrono = "0.4.19"
futures-util = "0.3.12"
json-patch = "0.2.6"
k8s-openapi = "0.11.0"
kube = "0.48.0"
kube-runtime = "0.48.0"
serde = "1.0.123"
serde_json = "1.0.61"
serde_yaml = "0.8.15"
strum = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.1.1", features = ["time", "macros"] }
tokio-stream = "0.1.2"
tokio-util = "0.6.3"
tracing = "0.1.22"
tracing-futures = "0.2.4"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]

k8s-openapi = { version = "0.11.0", features = ["v1_19"] }
 
