[package]
name = "kube-utils"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
base64 = "0.13.0"
chrono = "0.4.19"
futures-util = "0.3.13"
json-patch = "0.2.6"
k8s-openapi = "0.11.0"
kube = "0.51.0"
kube-runtime = "0.51.0"
serde = "1.0.123"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
strum = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.2.0", features = ["time", "macros"] }
tokio-stream = "0.1.3"
tokio-util = "0.6.3"
tracing = "0.1.25"
tracing-futures = "0.2.5"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]

k8s-openapi = { version = "0.11.0", features = ["v1_19"] }
 
