[workspace]
members = ["example-controller", "example-lock"]

[package]
name = "kube-utils"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.48"
base64 = "0.13.0"
chrono = "0.4.19"
futures = "0.3.14"
json-patch = "0.2.6"
clap = "3.0.0-beta.2"
k8s-openapi = "0.11.0"
kube = { git = "https://github.com/mikailbag/kube-rs", branch = "all", features = ["ws"] }
kube-runtime = { git = "https://github.com/mikailbag/kube-rs", branch = "all"}
rand = "0.8.3"
serde = "1.0.125"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
strum = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.5.0", features = ["time", "macros"] }
tokio-stream = "0.1.5"
tokio-util = "0.6.6"
tracing = "0.1.25"
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]

k8s-openapi = { version = "0.11.0", features = ["v1_19"] }
 
