[package]
name = "example-controller"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.48"
k8s-openapi = { version = "0.11.0", features = ["v1_19"] }
kube = { git = "https://github.com/mikailbag/kube-rs", branch = "all", features = ["derive"] }
kube-utils = { path = ".." }
schemars = "0.8.3"
serde = "1.0.125"
serde_json = "1.0.64"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
